<resources>
    <string name="app_name">FarmNET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_post">Create</string>

    <string name="sample_text">Sample text</string>

    <string name="getstarted">Get Started!</string>
    <string name="caption">WE WILL FIND THE BEST!</string>
    <string name="desc">find the best selling rates and make your life easier!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot</string>
    <string name="password1">Password?</string>
    <string name="or">or</string>
    <string name="create">Create an</string>
    <string name="account">account</string>
    <string name="already">Already have an</string>
    <string name="account1">account?</string>
    <string name="signup">Signup</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="select_timeline">Select Timeline</string>
    <string name="write_comment">Write a comment…</string>
    <string name="write_answer">Write your answer here…</string>
    <string name="send">Send</string>

    <!--Edit Profile-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="nic">NIC</string>
    <string name="dob">DOB</string>
    <string name="report_now">Report Now</string>
    <string name="type_complaint">Write your complaint here...</string>
    <string name="rate_now">Rate Now</string>

    <!--Create Deals-->
    <string name="product_name">Product Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="owner">Owner</string>
    <string name="published_date">Published Date</string>

    <!--Create Question-->
    <string name="question_title">Question Title</string>
    <string name="question_body">Question Body</string>
    <string name="tags">Tags</string>

    <!--create advertisement-->
    <string name="ads_title">Advertisement Title</string>
    <string name="price">Price</string>
    <string name="contact_number">Contact Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="my_questions">My Questions</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="more_details"><![CDATA[More Details >>]]></string>
    <string name="ad_email">Email :</string>
    <string name="ad_telephone">Telephone :</string>
    <string name="contact_us">Contact Us:</string>
    <string name="notification">Notification</string>
    <string name="crop_deals">Crop Deals</string>
    <string name="articles">Articles</string>
    <string name="ads">Ads</string>
    <string name="article_title">Article Title</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <string name="search">Search</string>

    <string name="price_range">Price (Max:3000)</string>
    <string name="rating_range">Rating (Max:5)</string>
    <string name="range_divider">-</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="name_of_farmer">Name of farmer</string>
    <string name="name_of_user">Name of user</string>
    <string name="change_password">Change Password</string>
    <string name="find_user">Find User</string>
    <string name="reset">Reset</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="user_types">
        <item>Select user type</item>
        <item>Farmer</item>
        <item>Buyer</item>
        <item>Knowledge Provider</item>
        <item>Agri Service Provider</item>
    </string-array>
    <string name="title_activity_select_location">Map</string>
    <string name="get_location">Get Selected Location</string>
    <string name="unit_price_tag">Unit Price :</string>
    <string name="amount_tag">Amount :</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="view_more"><![CDATA[View More>>]]></string>
    <string name="rate_user">Rate User</string>
    <string name="report_user">Report User</string>
    <string name="info">Info</string>
    <string name="e_mail">E-mail</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="new_task">New Task</string>
    <string name="new_advertisement">New Advertisement</string>
    <string name="new_article">New Article</string>
    <string name="new_deal">New Deal</string>
    <string name="new_question">New Question</string>
    <string name="new_timeline">New Timeline</string>
    <string name="advertisement_info">Advertisement Info</string>
    <string name="deal_info">Deal Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="filter_user">Filter User</string>
    <string name="timelines">Time lines</string>
    <string name="timeline">Timeline</string>
    <string name="answers">Answers</string>
    <string name="article">Article</string>
</resources>
