<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SignupActivity"
    android:background="@color/bg_main">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-85dp"
        android:scaleType="fitStart"
        android:src="@drawable/ic_backtop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="225dp"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/etsignupemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_box"
                android:textColor="@color/startcaption"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/ubunturegular"
                android:gravity="center"
                android:hint="@string/e_mail"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_box"
                android:textColor="@color/startcaption"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:inputType="text"
                android:fontFamily="@font/ubunturegular"
                android:gravity="center"
                android:hint="@string/name"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp">

            <Spinner
                android:id="@+id/spinnerusertype"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@drawable/custom_spinner"
                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:paddingEnd="14dp"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/etsignuppassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_box"
                android:textColor="@color/startcaption"
                android:textSize="16sp"
                android:fontFamily="@font/ubunturegular"
                android:paddingHorizontal="5dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/password"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/etsignupretypepassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_box"
                android:textColor="@color/startcaption"
                android:textSize="16sp"
                android:paddingHorizontal="5dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:fontFamily="@font/ubunturegular"
                android:hint="@string/re_type_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custome_button"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="bottom"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:fontFamily="@font/verdana"
                android:gravity="end|top"
                android:paddingTop="8dp"
                android:text="@string/already"
                android:textColor="@color/startcaption"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/verdana"
                android:gravity="start|top"
                android:paddingStart="7dp"
                android:paddingTop="8dp"
                android:text="@string/account1"
                android:textColor="@color/texthighlight"
                android:textSize="16sp"
                android:onClick="clickOnHaveAccount"/>


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_background_grass" />

</RelativeLayout>